Doc/force-app/main/default/objects/OpportunityLineItem/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox tracks whether or not an Opportunity Product is still active for renewal Opportunities. For example, if this product is cancelled, the checkbox is unchecked, and a separate cancellation Opportunity is created.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>