Doc/force-app/main/default/objects/OpportunityLineItem/fields/ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change__c</fullName>
    <description>BIZ-53197</description>
    <label>ACV Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>