Doc/force-app/main/default/objects/OpportunityLineItem/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Area for more information to be input regarding product description/specifications.</description>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>