Doc/force-app/main/default/objects/OpportunityLineItem/fields/Combined_Amount_on_OSA__c.field-meta.xml
<CustomField>
    <fullName>Combined_Amount_on_OSA__c</fullName>
    <description>This is the combined total that we show on the OSA for items that are split on the Opportunity Products. For example, use this field to show what the total bundled Discount is.</description>
    <inlineHelpText>Bundled amount shown on OSA, if you have to split the amount among multiple opportunity products.</inlineHelpText>
    <label>Combined Amount on OSA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>