Doc/force-app/main/default/objects/OpportunityLineItem/fields/CPQ_ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>CPQ_ACV_Change__c</fullName>
    <formula>SBQQ__QuoteLine__r.List_Price_Text__c* SBQQ__QuoteLine__r.SBQQ__Quantity__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>