Doc/force-app/main/default/objects/OpportunityLineItem/fields/Customer_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_List_Price__c</fullName>
    <label>Customer List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>