Doc/force-app/main/default/objects/OpportunityLineItem/fields/Customer_Sales_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Price_Per_Month__c</fullName>
    <description>Created as Part of BIZ-63600</description>
    <label>Customer Sales Price Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>