Doc/force-app/main/default/objects/OpportunityLineItem/fields/Days_Each__c.field-meta.xml
<CustomField>
    <fullName>Days_Each__c</fullName>
    <description>The Number of days for each unit of Product</description>
    <formula>PricebookEntry.Product2.Days__c</formula>
    <inlineHelpText>The number of days for each unit of product.</inlineHelpText>
    <label>Days Each</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>