Doc/force-app/main/default/objects/OpportunityLineItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>Total_Price_Book_Amount__c - Total_Price_Annual__c</formula>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>