Doc/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Term__c.field-meta.xml
<CustomField>
    <fullName>Discount_Term__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Discount_Type__c )</formula>
    <label>Discount Term</label>
    <type>Text</type>
</CustomField>