Doc/force-app/main/default/objects/OpportunityLineItem/fields/DLIP_OP4I_Error__c.field-meta.xml
<CustomField>
    <fullName>DLIP_OP4I_Error__c</fullName>
    <description>Created as part of BIZ-68739</description>
    <label>DLIP OP4I Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>