Doc/force-app/main/default/objects/OpportunityLineItem/fields/Ghost_Mapping_Payload__c.field-meta.xml
<CustomField>
    <fullName>Ghost_Mapping_Payload__c</fullName>
    <label>Ghost Mapping Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>