Doc/force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <description>This field was created at part of the renewal management implementation. It summarizes the Sales Price + Recurring Amount Change so it is easy to report on the total value of the new renewal invoice.</description>
    <formula>UnitPrice + Recurring_Amount_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is only relevant for renewal opportunities.</inlineHelpText>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>