Doc/force-app/main/default/objects/OpportunityLineItem/fields/Item_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_ID__c</fullName>
    <formula>PricebookEntry.Product2.Item_Master_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Master ID</label>
    <type>Text</type>
</CustomField>