Doc/force-app/main/default/objects/OpportunityLineItem/fields/Item_Master_Name_del_del__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Name_del_del__c</fullName>
    <formula>PricebookEntry.Product2.Item_Master_Product__r.Item_Name__c</formula>
    <label>Item Master Name</label>
    <type>Text</type>
</CustomField>