Doc/force-app/main/default/objects/OpportunityLineItem/fields/Last_Sync_to_OP4I_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_to_OP4I_Time__c</fullName>
    <label>Last Sync to OP4I Time</label>
    <type>DateTime</type>
</CustomField>