Doc/force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Discount_Percent__c</fullName>
    <description>BIZ-62795</description>
    <formula>IF(
CPQ_List_Price__c = 0,
0,
(CPQ_List_Price__c - Net_Price_Month__c)/CPQ_List_Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total discount from list price after factoring in one-time credits.</inlineHelpText>
    <label>Total Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>