Doc/force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Discount_Text__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Discount_Text__c</fullName>
    <formula>TEXT(ROUND(List_Price_Discount_Percent__c*100,2))&amp;&quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Discount</label>
    <type>Text</type>
</CustomField>