Doc/force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Matches_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Matches_Sales_Price__c</fullName>
    <formula>IF(ListPrice = UnitPrice,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Matches Sales Price</label>
    <type>Checkbox</type>
</CustomField>