Doc/force-app/main/default/objects/OpportunityLineItem/fields/listprice_c__c.field-meta.xml
<CustomField>
    <fullName>listprice_c__c</fullName>
    <formula>ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>listprice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>