Doc/force-app/main/default/objects/OpportunityLineItem/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Fee Earners</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>no meter type</fullName>
            </value>
            <value>
                <fullName>Firmwide</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Named User</fullName>
                <isActive>false</isActive>
                <label>Named User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>