Doc/force-app/main/default/objects/OpportunityLineItem/fields/Net_Price_Month__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Month__c</fullName>
    <description>Field for value of net price of related quote line</description>
    <inlineHelpText>Monthly Net Unit Price</inlineHelpText>
    <label>Net Price/Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>