Doc/force-app/main/default/objects/OpportunityLineItem/fields/NS_Order_id__c.field-meta.xml
<CustomField>
    <fullName>NS_Order_id__c</fullName>
    <label>NS Order id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>