Doc/force-app/main/default/objects/OpportunityLineItem/fields/One_Time_Credit__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Credit__c</fullName>
    <description>BIZ-65729</description>
    <label>One Time Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>