Doc/force-app/main/default/objects/OpportunityLineItem/fields/One_time_value__c.field-meta.xml
<CustomField>
    <fullName>One_time_value__c</fullName>
    <formula>If ( Opportunity_Product_Revenue_Type__c = &quot;One-time&quot;,  TotalPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-time value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>