Doc/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Prod_Updated__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Prod_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Prod Updated</label>
    <type>Checkbox</type>
</CustomField>