Doc/force-app/main/default/objects/OpportunityLineItem/fields/Original_Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity Product Id</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>