Doc/force-app/main/default/objects/OpportunityLineItem/fields/Original_Oppty_Text_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Oppty_Text_Id__c</fullName>
    <description>Capture Original Oppty Id in Text - BIZ-71429</description>
    <label>Original Oppty Text Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>