Doc/force-app/main/default/objects/OpportunityLineItem/fields/OSA_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>OSA_Gross_Price__c</fullName>
    <description>Field to hold value of OSA list price from related quote line</description>
    <formula>SBQQ__QuoteLine__r.Total_OSA_List_Price__c</formula>
    <label>OSA Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>