Doc/force-app/main/default/objects/OpportunityLineItem/fields/Parent_of_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twin field, enabled to true for Select and Static Parent SKU&apos;s</description>
    <label>Parent of Bundle</label>
    <type>Checkbox</type>
</CustomField>