Doc/force-app/main/default/objects/OpportunityLineItem/fields/Price_Book_Selected__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Selected__c</fullName>
    <formula>Opportunity.Pricebook2.Name</formula>
    <label>Price Book Selected</label>
    <type>Text</type>
</CustomField>