Doc/force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Adjustment__c</fullName>
    <label>Recurring Adjustment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>