Doc/force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change__c</fullName>
    <label>Recurring Amount Change (Annual)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>