Doc/force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount__c</fullName>
    <description>Field used to display additional discount amount from related quote line</description>
    <label>Recurring Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>