Doc/force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Type__c</fullName>
    <formula>TEXT(Opportunity.Renewal_Quote_Type__c)</formula>
    <label>Renewal Quote Type</label>
    <type>Text</type>
</CustomField>