Doc/force-app/main/default/objects/OpportunityLineItem/fields/Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Amount__c</fullName>
    <label>Retainer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>