Doc/force-app/main/default/objects/OpportunityLineItem/fields/Retrigger_OP4I_Sync__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_OP4I_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated as part of BIZ-71760. Checking this checkbox will trigger the OP4I Sync for this record.</description>
    <label>Retrigger OP4I Sync</label>
    <type>Checkbox</type>
</CustomField>