Doc/force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocated__c</fullName>
    <description>Created as part of BIZ-68739</description>
    <label>Revenue Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>