Doc/force-app/main/default/objects/OpportunityLineItem/fields/Segment_Bundle_Line__c.field-meta.xml
<CustomField>
    <fullName>Segment_Bundle_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-68140 - Reference to the parent Static Bundle Opportunity Line Item for segmentation tracking of Static Components.</description>
    <label>Segment Bundle Line</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product (Segment Bundle Line)</relationshipLabel>
    <relationshipName>Segment_Bundle_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>