Doc/force-app/main/default/objects/OpportunityLineItem/fields/Segment_Bundle_Line_OP4I_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Bundle_Line_OP4I_System_Id__c</fullName>
    <description>Captures Segment Bundle Line OP4I System ID. Created as part of BIZ-74451.</description>
    <formula>Segment_Bundle_Line__r.OP4I_System_Id__c</formula>
    <label>Segment Bundle Line OP4I System Id</label>
    <type>Text</type>
</CustomField>