Doc/force-app/main/default/objects/OpportunityLineItem/fields/Segment_Index__c.field-meta.xml
<CustomField>
    <fullName>Segment_Index__c</fullName>
    <description>Filed used to display segment Index form related quote line</description>
    <label>Segment Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>