Doc/force-app/main/default/objects/OpportunityLineItem/fields/Software_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Software_License_Term__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Product_License_Type__c)</formula>
    <label>Software License Term</label>
    <type>Text</type>
</CustomField>