Doc/force-app/main/default/objects/OpportunityLineItem/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriptions</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product_Sub</relationshipName>
    <type>Lookup</type>
</CustomField>