Doc/force-app/main/default/objects/OpportunityLineItem/fields/Subsidy_Type__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Type__c</fullName>
    <description>Which subsidy program does this correlate with?</description>
    <label>Subsidy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rekoop Upgrades</fullName>
            </value>
            <value>
                <fullName>Mid-Market Time</fullName>
            </value>
            <value>
                <fullName>Time 6.X Upgrade</fullName>
            </value>
            <value>
                <fullName>NPI - Terms</fullName>
            </value>
            <value>
                <fullName>TFG Migration</fullName>
            </value>
            <value>
                <fullName>Time Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>