Doc/force-app/main/default/objects/OpportunityLineItem/fields/system_field_for_update__c.field-meta.xml
<CustomField>
    <fullName>system_field_for_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>system field for update</label>
    <type>Checkbox</type>
</CustomField>