Doc/force-app/main/default/objects/OpportunityLineItem/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Field used to display subscription term from related quote line</description>
    <label>Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>