Doc/force-app/main/default/objects/OpportunityLineItem/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>