Doc/force-app/main/default/objects/OpportunityLineItem/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <description>Opportunity Product Quantity X Product Days</description>
    <formula>Quantity  *  PricebookEntry.Product2.Days__c</formula>
    <inlineHelpText>What is the total number of days for this Line Item?</inlineHelpText>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>