Doc/force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_Annual__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Annual__c</fullName>
    <formula>IF(Product_Type__c=&apos;Services&apos;,
TotalPrice,
(TotalPrice * 12) / Term__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price x12 only for Opportunity Product.Software License Type = Monthly</inlineHelpText>
    <label>Total Price (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>