Doc/force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_Book_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Book_Amount__c</fullName>
    <description>Total price book amount from related quote line</description>
    <label>Total Price Book Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>