Doc/force-app/main/default/objects/OpportunityLineItem/validationRules/Intapp_Prime_Minimum_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Intapp_Prime_Minimum_Hours</fullName>
    <active>false</active>
    <description>Intapp Prime products have a minimum of 20 hours.</description>
    <errorConditionFormula>AND(
  Item_Master_Product__r.Id=&quot;a3g50000001Kwqb&quot;,
  Services_Hours__c &lt; 20
)</errorConditionFormula>
    <errorDisplayField>Services_Hours__c</errorDisplayField>
    <errorMessage>A mimium of 20 hours must be purchase for Intapp Prime.</errorMessage>
</ValidationRule>