Doc/force-app/main/default/objects/OpportunityLineItem/validationRules/Subsidy_Amount_Only_on_Credit_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Subsidy_Amount_Only_on_Credit_Products</fullName>
    <active>false</active>
    <description>The Subsidy Amount and Type fields can only be populated for credit products.</description>
    <errorConditionFormula>AND(
   NOT(CONTAINS(Product_Type__c, &quot;Discount&quot;)),
  OR(
    NOT(ISBLANK(Subsidy_Amount__c)),
    NOT(ISBLANK(TEXT(Subsidy_Type__c)))
   )
)</errorConditionFormula>
    <errorDisplayField>Subsidy_Amount__c</errorDisplayField>
    <errorMessage>Subsidy Amount and Subsidy Type are only to be filled in for credit products.</errorMessage>
</ValidationRule>